--- a/carros-web-api/carros-web-api/src/main/resources/application.properties
+++ b/carros-web-api/carros-web-api/src/main/resources/application.properties
@@ -3,8 +3,15 @@ server.servlet.context-path=/carros-web-api
 # H2
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2
-# Datasource
+#Datasource
 spring.datasource.url=jdbc:h2:file:~/carros
 spring.datasource.username=sa
 spring.datasource.password=
 spring.datasource.driver-class-name=org.h2.Driver
+spring.jpa.hibernate.ddl-auto=create-drop
+
+#JPA
+spring.jpa.properties.hibernate.show_sql=true
+spring.jpa.properties.hibernate.use_sql_comments=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.type=trace
