--- a/carros-ui/angular.json
+++ b/carros-ui/angular.json
@@ -27,6 +27,8 @@
               "src/assets"
             ],
             "styles": [
+              "./src/assets/sass/fonts.scss",
+              "./src/assets/sass/theme.scss",
               "src/styles.scss"
             ],
             "scripts": [],
